--- a/key-backend/package.json
+++ b/key-backend/package.json
@@ -9,6 +9,8 @@
   "author": "wayne",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "env": "0.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.8.7"
   }
