added 'about' modal

--- a/dunjin-app/package.json
+++ b/dunjin-app/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "moment": "^2.25.0",
     "plaid": "^4.11.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-plaid-link": "^2.3.0-alpha.0",
     "react-scripts": "3.4.1"
