--- a/dunjin-app/package.json
+++ b/dunjin-app/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "moment": "^2.25.0",
+    "mysql": "^2.18.1",
     "plaid": "^4.11.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
