--- a/dunjin-app/package.json
+++ b/dunjin-app/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.25.0",
     "mysql": "^2.18.1",
     "plaid": "^4.11.0",
@@ -17,6 +19,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-plaid-link": "^2.3.0-alpha.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
