--- a/dunjin-app/package.json
+++ b/dunjin-app/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.25.0",
