--- a/dunjin-app/package.json
+++ b/dunjin-app/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^16.13.1",
     "react-plaid-link": "^2.3.0-alpha.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-simple-pie-chart": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
